--- a/index.html
+++ b/index.html
@@ -273,6 +273,102 @@
                                 <i class="material-icons">star_rate</i>
                             </div>
                         </div>
+                        <div class="movie-slide">
+                            <div class="movie-poster">
+                                <aside>
+                                    <div>
+                                        <a href="https://youtu.be/d96cjJhvlMA" data-vbtype="video" class="venobox play">
+                                            <i class="material-icons">play_arrow</i>
+                                        </a>
+                                        <a href="single-movie.html" class="read-more">read more</a>
+                                        <span class="date">Released: 7 Mar, 2017</span>
+                                    </div>
+                                </aside>
+                                <a href="#">
+                                    <img src="img/movie-9.jpg" alt="Movie title" />
+                                </a>
+                            </div>
+                            <h4 class="no-underline">The last post</h4>
+                            <div class="star-rating">
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                            </div>
+                        </div>
+                        <div class="movie-slide">
+                            <div class="movie-poster">
+                                <aside>
+                                    <div>
+                                        <a href="https://youtu.be/d96cjJhvlMA" data-vbtype="video" class="venobox play">
+                                            <i class="material-icons">play_arrow</i>
+                                        </a>
+                                        <a href="single-movie.html" class="read-more">read more</a>
+                                        <span class="date">Released: 7 Mar, 2017</span>
+                                    </div>
+                                </aside>
+                                <a href="#">
+                                    <img src="img/movie-10.jpg" alt="Movie title" />
+                                </a>
+                            </div>
+                            <h4 class="no-underline">The last post</h4>
+                            <div class="star-rating">
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                            </div>
+                        </div>
+                        <div class="movie-slide">
+                            <div class="movie-poster">
+                                <aside>
+                                    <div>
+                                        <a href="https://youtu.be/d96cjJhvlMA" data-vbtype="video" class="venobox play">
+                                            <i class="material-icons">play_arrow</i>
+                                        </a>
+                                        <a href="single-movie.html" class="read-more">read more</a>
+                                        <span class="date">Released: 7 Mar, 2017</span>
+                                    </div>
+                                </aside>
+                                <a href="#">
+                                    <img src="img/movie-1.jpg" alt="Movie title" />
+                                </a>
+                            </div>
+                            <h4 class="no-underline">The last post</h4>
+                            <div class="star-rating">
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                            </div>
+                        </div>
+                        <div class="movie-slide">
+                            <div class="movie-poster">
+                                <aside>
+                                    <div>
+                                        <a href="https://youtu.be/d96cjJhvlMA" data-vbtype="video" class="venobox play">
+                                            <i class="material-icons">play_arrow</i>
+                                        </a>
+                                        <a href="single-movie.html" class="read-more">read more</a>
+                                        <span class="date">Released: 7 Mar, 2017</span>
+                                    </div>
+                                </aside>
+                                <a href="#">
+                                    <img src="img/movie-8.jpg" alt="Movie title" />
+                                </a>
+                            </div>
+                            <h4 class="no-underline">The last post</h4>
+                            <div class="star-rating">
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                                <i class="material-icons">star_rate</i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -326,7 +422,7 @@
                             <div class="row movie-tabs">
                                 <div class="col-md-2 col-sm-3">
                                     <a href="single-movie.html">
-                                        <img src="img/movie-5.jpg" alt="Movie title" />
+                                        <img src="img/movie-10.jpg" alt="Movie title" />
                                     </a>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
